change margin on mobile view for navigation content, attempt to fix safari focus bug

--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,6 @@ header li.active a{
     padding: 7px;
   }
 
-  #navigation-content{
-    padding-bottom: 0.75rem;
-  }
-
   header img{
     display: none;
   }
